cmake_minimum_required(VERSION 3.5)
PROJECT(DATAENGINE)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -pthread")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(SOURCE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/src)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

MESSAGE(STATUS "Project name is " ${PROJECT})
MESSAGE(STATUS "This is EXECUTE dir " ${EXECUTABLE_OUTPUT_PATH})
MESSAGE(STATUS "This is SOURCE dir " ${SOURCE_OUTPUT_PATH})
MESSAGE(STATUS "This is LIBRARY dir " ${LIBRARY_OUTPUT_PATH})

# add local include dir
INCLUDE_DIRECTORIES(inc)
INCLUDE_DIRECTORIES(../WZAdapter)

# add mongocxx and bson include dir
SET(SHARE_LIB_PREFIX /usr/local)
INCLUDE_DIRECTORIES(${SHARE_LIB_PREFIX}/include/mongocxx/v_noabi)
INCLUDE_DIRECTORIES(${SHARE_LIB_PREFIX}/include/libmongoc-1.0)
INCLUDE_DIRECTORIES(${SHARE_LIB_PREFIX}/include/bsoncxx/v_noabi)
INCLUDE_DIRECTORIES(${SHARE_LIB_PREFIX}/include/libbson-1.0)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
