cmake_minimum_required(VERSION 3.5)
PROJECT(Demo)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g")  

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(inc)
INCLUDE_DIRECTORIES(inc/util)
INCLUDE_DIRECTORIES(../WZAdapter)
INCLUDE_DIRECTORIES(inc/CTP)
INCLUDE_DIRECTORIES(inc/util/wzmem_inc)
INCLUDE_DIRECTORIES(inc/util/wzsokect_inc)
INCLUDE_DIRECTORIES(../WZLogger/inc)
INCLUDE_DIRECTORIES(../WZConfigReader)
#ADD_SUBDIRECTORY(gtest)
#include_directories(gtest/include)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
