SET(LIB_SO mongocxx bsoncxx)
SET(CLASS_FILE
  MongodbEngine
)

# compile .so and .a
FOREACH(f ${CLASS_FILE})
        ADD_LIBRARY(${f} SHARED ${f}.cpp)
        ADD_LIBRARY(${f}_static STATIC ${f}.cpp)
        SET_TARGET_PROPERTIES(${f} PROPERTIES VERSION 1.5 SOVERSION 1)
        SET_TARGET_PROPERTIES(${f}_static PROPERTIES OUTPUT_NAME "${f}")
        SET_TARGET_PROPERTIES(${f} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
        SET_TARGET_PROPERTIES(${f}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
ENDFOREACH(f)
