SET(HU_FILE hu_gtest)
SET(LI_FILE li_gtest)
SET(LUO_FILE luo_gtest)
SET(GTEST_LIB gtest gflags pthread gtest_main)
SET(TEST_LIBS
  MongodbEngine
  mongocxx
  bsoncxx
)

# link all .so
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(${HU_FILE} ${HU_FILE}.cpp)
TARGET_LINK_LIBRARIES(${HU_FILE} ${GTEST_LIB} ${TEST_LIBS})

ADD_EXECUTABLE(${LI_FILE} ${LI_FILE}.cpp)
TARGET_LINK_LIBRARIES(${LI_FILE} ${GTEST_LIB} ${TEST_LIBS})

ADD_EXECUTABLE(${LUO_FILE} ${LUO_FILE}.cpp)
TARGET_LINK_LIBRARIES(${LUO_FILE} ${GTEST_LIB} ${TEST_LIBS})

