SET(LOG logger)
SET(INI iniparser)
SET(TEST TS)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g")

FOREACH(f ${LOG})
  ADD_LIBRARY(${f} SHARED ${f}.cpp)
  #ADD_LIBRARY(${f} STATIC ${f}.cpp)
  #SET_TARGET_PROPERTIES(${f} PROPERTIES VERSION 1.2 SOVERSION 1)
  #SET_TARGET_PROPERTIES(${f}_static PROPERTIES OUTPUT_NAME "${f}")
  #SET_TARGET_PROPERTIES(${f} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
  #SET_TARGET_PROPERTIES(${f}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
ENDFOREACH(f)

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_LIBRARY(${INI} SHARED ${INI}.cpp)

#ADD_EXECUTABLE(${TEST} ${TEST}.cpp)

#TARGET_LINK_LIBRARIES(${TEST} ${LOG} ${INI} glog)
