SET(CLASS_FILE logger)
#SET(MAIN_FILE testClient)
SET(MAIN_FILE testServer)
#SET(MAIN_FILE gtest_memqueue)
#SET(MAIN_FILE test_thread)
SET(UTILS_SO iniparser)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g")  

FOREACH(f ${CLASS_FILE})
	ADD_LIBRARY(${f} SHARED ${f}.cpp)
	#ADD_LIBRARY(${f} STATIC ${f}.cpp)
	#SET_TARGET_PROPERTIES(${f} PROPERTIES VERSION 1.2 SOVERSION 1)
	#SET_TARGET_PROPERTIES(${f}_static PROPERTIES OUTPUT_NAME "${f}")
	#SET_TARGET_PROPERTIES(${f} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	#SET_TARGET_PROPERTIES(${f}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
ENDFOREACH(f)

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
ADD_EXECUTABLE(${MAIN_FILE} ${MAIN_FILE}.cpp)
TARGET_LINK_LIBRARIES(${MAIN_FILE} gtest gflags pthread gtest_main ${CLASS_FILE} ${UTILS_SO} glog)
