SET(CLASS_FILE MemReader MemWriter MemEngine)
SET(READER_FILE reader)
SET(WRITER_FILE writer)
SET(QUEUETEST_FILE gtest_memqueue)
#SET(MAIN_FILE test_thread)
#SET(MAIN_FILE test_WR)
SET(UTILS_SO iniparser)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g")  

FOREACH(f ${CLASS_FILE})
	ADD_LIBRARY(${f} SHARED ${f}.cpp)
	#ADD_LIBRARY(${f} STATIC ${f}.cpp)
	#SET_TARGET_PROPERTIES(${f} PROPERTIES VERSION 1.2 SOVERSION 1)
	#SET_TARGET_PROPERTIES(${f}_static PROPERTIES OUTPUT_NAME "${f}")
	#SET_TARGET_PROPERTIES(${f} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	#SET_TARGET_PROPERTIES(${f}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
ENDFOREACH(f)

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(${READER_FILE} ${READER_FILE}.cpp)
ADD_EXECUTABLE(${WRITER_FILE} ${WRITER_FILE}.cpp)
ADD_EXECUTABLE(${QUEUETEST_FILE} ${QUEUETEST_FILE}.cpp)

TARGET_LINK_LIBRARIES(${READER_FILE} ${CLASS_FILE} gtest gflags pthread gtest_main ${UTILS_SO} logger glog )
TARGET_LINK_LIBRARIES(${WRITER_FILE} ${CLASS_FILE} gtest gflags pthread gtest_main ${UTILS_SO} logger glog )
TARGET_LINK_LIBRARIES(${QUEUETEST_FILE} gtest gflags pthread gtest_main ${UTILS_SO} logger glog )