SET(CLASS_FILE memengine)
#SET(QUEUETEST_FILE gtest_memqueue)
#SET(SINGLETEST_FILE gtest_mem_single)
SET(WRTEST_FILE test_WR)
SET(GTEST_SO gtest gflags pthread gtest_main)
SET(UTILS_SO iniparser logger glog)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g")  

FOREACH(f ${CLASS_FILE})
	ADD_LIBRARY(${f} SHARED ${f}.cpp)
	#ADD_LIBRARY(${f} STATIC ${f}.cpp)
	#SET_TARGET_PROPERTIES(${f} PROPERTIES VERSION 1.2 SOVERSION 1)
	#SET_TARGET_PROPERTIES(${f}_static PROPERTIES OUTPUT_NAME "${f}")
	#SET_TARGET_PROPERTIES(${f} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	#SET_TARGET_PROPERTIES(${f}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
ENDFOREACH(f)

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
LINK_DIRECTORIES(../../../WZConfigReader)
LINK_DIRECTORIES(../../../WZLogger/lib)

ADD_EXECUTABLE(${WRTEST_FILE} ${WRTEST_FILE}.cpp)
#ADD_EXECUTABLE(${QUEUETEST_FILE} ${QUEUETEST_FILE}.cpp)
#ADD_EXECUTABLE(${SINGLETEST_FILE} ${SINGLETEST_FILE}.cpp)

TARGET_LINK_LIBRARIES(${WRTEST_FILE} ${GTEST_SO} ${CLASS_FILE} ${UTILS_SO})
#TARGET_LINK_LIBRARIES(${QUEUETEST_FILE} ${GTEST_SO} ${UTILS_SO})
#TARGET_LINK_LIBRARIES(${SINGLETEST_FILE} ${GTEST_SO} ${UTILS_SO})
